# ShutdownApplet

./: MANIFEST.in  README.md  setup.cfg
ShutdownApplet/: ShutdownApplet.py
