[metadata]
name = ShutdownApplet
version = 0.0.2
author = Tobias Glaser
description = A Simple GUI to schedule a system shutdown
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiglaser/ShutdownApplet
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Intended Audience :: End Users/Desktop
    Topic :: Home Automation
    Topic :: Utilities

[options]
packages = find:
install_requires =


python_requires = >=3.10
include_package_data = True

[options.entry_points]
gui_scripts =
    ShutdownApplet = ShutdownApplet.ShutdownApplet:main